--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,32 +1,46 @@
-# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# ------------------------------------------------------------------------------
+# Common Configuration
+# ------------------------------------------------------------------------------
+spring.datasource.schema=classpath*:schema.sql
+spring.datasource.data=classpath*:data.sql
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://postgres:5432/db_springboot_exercices
-spring.datasource.username=db_user
-spring.datasource.password=db_password
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.mode=always
-spring.datasource.schema=classpath*:schema.sql
-spring.datasource.data=classpath*:data.sql
 
 
-#H2 Database configuration
+# ------------------------------------------------------------------------------
+# PostgreSQL Configuration
+# ------------------------------------------------------------------------------
+# spring.datasource.url=jdbc:postgresql://postgres:5432/db_springboot_exercices
+# spring.datasource.username=db_user
+# spring.datasource.password=db_password
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.jpa.defer-datasource-initialization=true
+# spring.sql.init.mode=always
+
+# ------------------------------------------------------------------------------
+# H2 Database Configuration
+# ------------------------------------------------------------------------------
 database=h2
-spring.datasource.schema=classpath*:schema.sql
-spring.datasource.data=classpath*:data.sql
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 
+# ------------------------------------------------------------------------------
+# Springdoc / Swagger Configuration
+# ------------------------------------------------------------------------------
 springdoc.api-docs.path=/docs
 springdoc.swagger-ui.path=/swagger
+springdoc.swagger-ui.tagsSorter=alpha
 
-
+# ------------------------------------------------------------------------------
+# Logging Configuration
+# ------------------------------------------------------------------------------
 logging.level.root=INFO
 logging.level.org.springframework.boot.web.embedded.tomcat=INFO
 
+# ------------------------------------------------------------------------------
+# Server Configuration
+# ------------------------------------------------------------------------------
 server.port=5432
-
-
